--- a/css/icOne.css
+++ b/css/icOne.css
@@ -1,3 +1,45 @@
-body, html {
-  font-size: 12px;
+html {
+  font-size: 62.5%;
+  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+.paragraph {
+  color: red;
+  font-size: 1.2rem;
+  position: relative;
+  top: 10px;
+  bottom: 20px;
+  border: 2px, solid;
+}
+
+nav ul{
+  list-style: none;
+  padding: 0;
+  text-align: center;
+}
+nav ul li{
+  display: inline-block;
+  margin-right: 20px;
+}
+nav ul li:last-child {
+  margin-right: 0;
+}
+nav ul li > a {
+  color: blue;
+  font-size: 1.5rem;
+  font-style: normal;
+  text-decoration: none;
+}
+
+.pseudoDemo:hover {
+  color: yellow;
+}
+
+.demoHeader {
+  display:block;
+  text-align: right;
+}
+
+.cp {
+  display:block
 }
